# Optm-lvgl-test

./: CMakeLists.txt  lv_conf.h  simulator.code-workspace
src/: control_panel.c  control_panel.h  main.c
src/assets/: calendar_days_svg_data.h  lock_solid_svg_data.h  lock_svg_data.h  logo_svg_data.h  optmg4_svg_data.h  triangle_exclamation_svg_data.h  usa_logo_svg_data.h  wind_svg_data.h
src/fonts/: fonts_bold.h  lv_font_montserrat_bold_16.c  lv_font_montserrat_bold_18.c  lv_font_montserrat_bold_20.c  lv_font_montserrat_bold_22.c  lv_font_montserrat_bold_24.c  lv_font_montserrat_extrabold_16.c  lv_font_montserrat_extrabold_18.c  lv_font_montserrat_extrabold_20.c  lv_font_montserrat_extrabold_22.c  lv_font_montserrat_extrabold_24.c  lv_font_montserrat_light_12.c  lv_font_montserrat_light_16.c  lv_font_montserrat_light_7.c  lv_font_montserrat_regular_10.c  lv_font_montserrat_regular_12.c  lv_font_montserrat_regular_14.c  lv_font_montserrat_regular_16.c  lv_font_montserrat_regular_18.c  lv_font_montserrat_regular_20.c  lv_font_montserrat_regular_22.c  lv_font_montserrat_regular_24.c  lv_font_montserrat_semibold_12.c  lv_font_montserrat_semibold_16.c  lv_font_montserrat_semibold_20.c  lv_font_montserrat_semibold_22.c  lv_font_montserrat_semibold_24.c
src/fonts/fonts_src/: fontsource-montserrat-5.2.8.tgz
src/screens/: screen_blow_prompt.c  screen_blow_prompt.h  screen_blow_prompt_anim.c  screen_blow_prompt_anim.h  screen_diagnostic.c  screen_diagnostic.h  screen_free_restart.c  screen_free_restart.h  screen_free_restart_bold.c  screen_free_restart_bold.h  screen_free_restart_icons.c  screen_free_restart_icons.h  screen_initial_card.c  screen_initial_card.h  screen_initial_card_bold.c  screen_initial_card_bold.h  screen_initial_test.c  screen_initial_test.h  screen_initial_test_icons.c  screen_initial_test_icons.h  screen_initial_test_pass.c  screen_initial_test_pass.h  screen_initial_test_pass_icons.c  screen_initial_test_pass_icons.h  screen_invalid_sample.c  screen_invalid_sample.h  screen_invalid_sample_bold.c  screen_invalid_sample_bold.h  screen_invalid_sample_icons.c  screen_invalid_sample_icons.h  screen_lockout.c  screen_lockout.h  screen_lockout_bold.c  screen_lockout_bold.h  screen_lockout_icons.c  screen_lockout_icons.h  screen_logo.c  screen_logo.h  screen_optmg4_logo.c  screen_optmg4_logo.h  (+50 more)
src/ui/: accent_bar.h  bottom_bar.h  carousel_anim.h  device_config.h  gradient_bg.h  text_utils.h
